# ai-chatbot-capstone

./: .env.template  .gitignore  CAPSTONE-EVALUATION.md  NEXT-STEPS.md  PRE-COMMIT-CHECKLIST.md  README.md  SECURITY.md  database.py  docker-compose.yml  git-setup-commands.md  identity_manager.py  llm_orchestrator.py  main.py  models.py  monitoring.py  pyproject.toml  requirements.txt  security_check.py  vector_store.py
.github/workflows/: ci.yml
agents/: feedback_agent.py  intent_agent.py  rag_agent.py  scheduler_agent.py  telephony_agent.py  voice_agent.py
static/css/: style.css
static/js/: chat.js
templates/: index.html
tests/: test_main.py
